--- a/day-1-flexbox/1-intro-floats/begin/css/floats.css
+++ b/day-1-flexbox/1-intro-floats/begin/css/floats.css
@@ -5,100 +5,98 @@ html {
 }
 /* inherit border-box on all elements in the universe and before and after
  */
-*, 
-*:before, 
+*,
+*:before,
 *:after {
   box-sizing: inherit;
 }
 
 body {
-	font-family: Arial, Geneva, sans-serif;
+  font-family: Arial, Geneva, sans-serif;
 }
 a {
-	color: #2772B0;
+  color: #2772b0;
 }
 .wrapper {
-	width: 97%;
-	max-width: 1200px;
-	margin: 0 auto;
-	float: none;
-	background-color: #fff;
+  width: 97%;
+  max-width: 1200px;
+  margin: 0 auto;
+  float: none;
+  background-color: #fff;
 }
 
 div img {
-	width: 100%;
-	max-width: 225px; 
+  width: 100%;
+  max-width: 225px;
 }
 
 /* grid system -- mobile first! */
 
-
 /* Mobile Landscape Screen Sizes */
 @media only screen and (min-width: 375px), (max-width: 475px) {
-	.row1 article {
-		background-color: rgb(235, 211, 101);
-		width: 100%;
-	}
-	.row2 article {
-		width: 100%;
-		background-color: rgb(116, 248, 231);
-	}
-	.row3 article {
-		width: 100%;
-		background-color: #acdb61;
-	}
-	.row4 article {
-		width: 100%;
-		background-color: #d16274;
-	}
-
+  .row1 article {
+    background-color: rgb(235, 211, 101);
+    width: 100%;
+  }
+  .row2 article {
+    width: 100%;
+    background-color: rgb(116, 248, 231);
+  }
+  .row3 article {
+    width: 100%;
+    background-color: #acdb61;
+  }
+  .row4 article {
+    width: 100%;
+    background-color: #d16274;
+  }
 }
 
 /* Desktop screen Sizes */
 @media only screen and (min-width: 768px) {
-	.row1 {
-		width: 100%;
-		overflow: auto;
-	}
-	.row1 article {
-		width: 24%;
-		margin: .5%;
-		float: left;
-		background-color: rgb(235, 211, 101);
-	}
-	.row1::after {
-		content: "";
-		clear: both;
-		display: table;
-	}
-	.row2 {
-		width: 100%;
-	}
-	.row2 article {
-		background-color: rgb(116, 248, 231);
-	}
-	.row3 {
-		width: 100%;
-		overflow: auto; 
-	}
-	.row3 article {
-		margin: .5%;
-		float: left;
-		background-color: #acdb61;
-	}
-	.row3 .article1 {
-		width: 24%;
-	}
-	.row3 .article2 {
-		width: 74%;
-	}
-	.row3::after {
-		content: "";
-		clear:both;
-		display: table;
-	}
-	.row4 {
-		width: 100%;
-		background-color: #d16274;
-	}
+  .row1 {
+    width: 100%;
+    overflow: auto;
+  }
+  .row1 article {
+    width: 24%;
+    margin: 0.5%;
+    float: left;
+    background-color: rgb(235, 211, 101);
+  }
+  .row1::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  .row2 {
+    width: 100%;
+  }
+  .row2 article {
+    background-color: rgb(116, 248, 231);
+  }
+  .row3 {
+    width: 100%;
+    overflow: auto;
+  }
+  .row3 article {
+    margin: 0.5%;
+    float: left;
+    background-color: #acdb61;
+  }
+  .row3 .article1 {
+    width: 24%;
+  }
+  .row3 .article2 {
+    width: 74%;
+  }
+  .row3::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+  .row4 {
+    width: 100%;
+    background-color: #d16274;
+  }
 }
