--- a/day-1-flexbox/3-flexbox-grid/begin/css/flexbox.css
+++ b/day-1-flexbox/3-flexbox-grid/begin/css/flexbox.css
@@ -5,102 +5,109 @@ html {
 }
 /* inherit border-box on all elements in the universe and before and after
  */
-*, 
-*:before, 
+*,
+*:before,
 *:after {
   box-sizing: inherit;
 }
 
 body {
-	font-family: Arial, Geneva, sans-serif;
+  font-family: Arial, Geneva, sans-serif;
 }
 a {
-	color: #2772B0;
+  color: #2772b0;
 }
 .wrapper {
-	width: 97%;
-	max-width: 1200px;
-	margin: 0 auto;
-	float: none;
-	background-color: #fff;
+  width: 97%;
+  max-width: 1200px;
+  margin: 0 auto;
+  float: none;
+  background-color: #fff;
 }
 
 div img {
-	width: 100%;
-	max-width: 225px; 
+  width: 100%;
+  max-width: 225px;
 }
 
 /* grid system -- mobile first! */
 
-
 /* Mobile Landscape Screen Sizes */
-@media only screen and (min-width: 480px)  {
-
+@media only screen and (min-width: 480px) {
 }
 /* Desktop screen Sizes */
 @media only screen and (min-width: 768px) {
-/* common properties */
-.row-1, .row-2, .row-3, .row-4, .row-5 {
-	display: flex;
-	justify-content: space-evenly;
-	margin-bottom: 1%;
-}
-.col-1, .col-1-1, .col-1-2, .col-12, .col-1-2-1 {
-	display: flex;
-	flex-flow: column wrap;
-	margin: 0 1%;
-	padding: 1%;
-	border-radius: 15px;
-}
-.col img, .col h3 {
-	align-self: center;
-}
+  /* common properties */
+  .row-1,
+  .row-2,
+  .row-3,
+  .row-4,
+  .row-5 {
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 1%;
+  }
+  .col-1,
+  .col-1-1,
+  .col-1-2,
+  .col-12,
+  .col-1-2-1 {
+    display: flex;
+    flex-flow: column wrap;
+    margin: 0 1%;
+    padding: 1%;
+    border-radius: 15px;
+  }
+  .col img,
+  .col h3 {
+    align-self: center;
+  }
 
-/* col-1 */
-.row-1 {
-	margin-top: 1%;
-}
-.col-1 {
-	flex: 1 1 20%;	
-	background-color: #ccf;
-}
+  /* col-1 */
+  .row-1 {
+    margin-top: 1%;
+  }
+  .col-1 {
+    flex: 1 1 20%;
+    background-color: #ccf;
+  }
 
-/* col-1-1 */
-.col-1-1 {
-	flex: 1 0 48%;
-	background-color: #cff;
-}
+  /* col-1-1 */
+  .col-1-1 {
+    flex: 1 0 48%;
+    background-color: #cff;
+  }
 
-/* col-1-2 */
-.col-1-2 {
-	background-color: #ffc;
-}
-.article1 {
-	flex: 1 0 21%;
-}
-.article2 {
-	flex: 2 0 75%;
-}
+  /* col-1-2 */
+  .col-1-2 {
+    background-color: #ffc;
+  }
+  .article1 {
+    flex: 1 0 21%;
+  }
+  .article2 {
+    flex: 2 0 75%;
+  }
 
-/* col-12 */
-.col-12 {
-	background-color: #cfc;
-	flex: 1 0 98%;
-}
+  /* col-12 */
+  .col-12 {
+    background-color: #cfc;
+    flex: 1 0 98%;
+  }
 
-/* col-1-2-1 */
-.row-5{
-	flex-wrap: wrap;
-}
-.article3 {
-	order: 1;
-	flex: 1 0 48%;
-	background-color: #cfc;
-	margin-top: 1%;
-}
-.article4 {
-	order: 0;
-	flex: 1 0 98%;
-	background-color: #cff;
-}
+  /* col-1-2-1 */
+  .row-5 {
+    flex-wrap: wrap;
+  }
+  .article3 {
+    order: 1;
+    flex: 1 0 48%;
+    background-color: #cfc;
+    margin-top: 1%;
+  }
+  .article4 {
+    order: 0;
+    flex: 1 0 98%;
+    background-color: #cff;
+  }
 }
